<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_warta"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/navigation_warta"
        android:name="melodion.github.io.UI.F_warta.Fragment_Warta"
        android:label="@string/title_warta"
        tools:layout="@layout/fragment_warta" />

    <fragment
        android:id="@+id/navigation_renungan"
        android:name="melodion.github.io.UI.F_Renungan.Fragment_Renungan"
        android:label="@string/title_renungan"
        tools:layout="@layout/fragment_renungan" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="melodion.github.io.UI.F_Chat.Fragment_Chat"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_keuangan"
        android:name="melodion.github.io.UI.F_Keuangan.Fragment_Keuangan"
        android:label="@string/title_keuangan"
        tools:layout="@layout/fragment_keuangan" />


    <fragment
        android:id="@+id/navigation_multimedia"
        android:name="melodion.github.io.UI.F_Multimedia.Fragment_Multimedia"
        android:label="@string/title_multimedia"
        tools:layout="@layout/fragment_multimedia" />

</navigation>